--- a/home.html
+++ b/home.html
@@ -257,7 +257,7 @@ E-mail : info@bppimt.ac.in<br>
 </div>
 
 <nav id="outer-nav" class="outer-nav">
-    <div style="font-family:tarjanpro"><a href="index.html" class="icon-home">Home</a></div>
+    <div style="font-family:tarjanpro"><a href="home.html" class="icon-home">Home</a></div>
     <div style="font-family:tarjanpro"> <a href="events.html" class="icon-news">Events</a></div>
     <div style="font-family:tarjanpro"> <a href="gallery.html" class="icon-image">Gallery</a></div>
     <div style="font-family:tarjanpro">  <a href="team.html" class="icon-lock">Team</a></div>
