--- a/home.html
+++ b/home.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Techstorm 2.19</title>
+<html lang="en">
+	<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <link rel="stylesheet" href="./index_files/bulma.css">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width">
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Tecchstorm 2.19 | Events</title>
   <link rel="stylesheet" type="text/css" href="./index_files/component.css">
   <link rel="stylesheet" href="./index_files/master.css">
   <link rel="stylesheet" href="./index_files/navbar.css">
