--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Tecchstorm 2.19 | Events</title>
+		<title>Tecchstorm 2.19</title>
   <link rel="stylesheet" type="text/css" href="./index_files/component.css">
   <link rel="stylesheet" href="./index_files/master.css">
   <link rel="stylesheet" href="./index_files/navbar.css">
