--- a/gallery.html
+++ b/gallery.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <!-- saved from url=(0037)http://techcurio.co.in/contactUs.html -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
+<html lang="en">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <link rel="stylesheet" href="./contactUs_files/bulma.css">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
