--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <!-- saved from url=(0037)http://techcurio.co.in/contactUs.html -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html lang="en">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
   <link rel="stylesheet" href="./contactUs_files/bulma.css">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="./contactUs_files/component.css">
+  <title>Tecchstorm 2.19 | Contact</title>
+	<link rel="stylesheet" type="text/css" href="./contactUs_files/component.css">
   <link rel="stylesheet" href="index_files/master.css">
   <link rel="stylesheet" href="./contactUs_files/team.css">
   <link rel="stylesheet" href="./contactUs_files/main.css">
