--- a/team.html
+++ b/team.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <!-- saved from url=(0032)http://techcurio.co.in/team.html -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html lang="en">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   
   <link rel="stylesheet" href="./team_files/bulma.css">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="./team_files/component.css">
+<title>Tecchstorm 2.19 | Team</title>
+<link rel="stylesheet" type="text/css" href="./team_files/component.css">
   <link rel="stylesheet" href="./team_files/master.css">
     <link rel="stylesheet" href="./team_files/main.css">
       <link rel="stylesheet" href="./team_files/team.css">
