--- a/home.html
+++ b/home.html
@@ -199,7 +199,8 @@ We invite you all to come and unleash your technical skills and creativity, be o
       <div class="columns is-centered">
         <div class="column is-3 ">
           <figure>
-<!--            <img src="./index_files/EXPLORE-LOGO.png" alt="">-->
+            <img src="./index_files/EXPLORE-LOGO.png" alt="">
+		  <img src="./index_files/EXPLORE-LOGO.png" alt="">
           </figure>
         </div>
       </div>
