--- a/Rovers.html
+++ b/Rovers.html
@@ -221,7 +221,7 @@ overcoming the problem.</p>
 						</p>
 						<p class='dummy-text'>Contact Person:</p>
 						<ul class = 'dummy-text'>
-							<li>Aheli Das(ECE)-7687085093</li>
+							<li>Shayan Sen(ECE)-7687887001</li>
 							<li>Aniket Mandal(EE)-8902694932</li>
 						</ul>
 					</div>
@@ -271,7 +271,7 @@ round is an aptitude round with tricky questions, out of which 4 teams proceed t
                         </p>
 						<p class='dummy-text'>Contact Person:</p>
 						<ul class = 'dummy-text'>
-							<li>Soham Debnath(ECE)-8981832081</li>
+							<li>Soham Debnath(ECE)-7980549825</li>
 							<li></li>
 						</ul>
 					</div>
@@ -496,7 +496,7 @@ Each team will be given a test run with their bots before the commences of the e
 						<p class='dummy-text'>Contact Person:</p>
 						<ul class = 'dummy-text'>
 							<li>Abhirup Bose(ECE)-9547203003</li>
-							<li>Garima Baguria(EE)-7903501574</li>
+							<li>Garima Bagria(EE)-7595863188</li>
 						</ul>
 					</div>
 					<div>
