--- a/Rovers.html
+++ b/Rovers.html
@@ -444,9 +444,7 @@ Teams having wireless bots will be rewarded with 50 points extra.
                         </ul>
 						
 						<a href="./eventReg/Terrence.html"><div id="btn">Register</div></a>
-						<p class='dummy-text'>Event Description : One of the two members will be blind-folded. A maze will be in front of the participants. A
-small car will have to trace the maze and solve it while the blind folded person has the remote. The second person
-will have to assist his/her partner in solving the maze.</p>
+						<p class='dummy-text'>Event Description : </p>
 						<p class="dummy-text">
 							<b>BOT SPECIFICATION</b><br><br><br>
 1.The dimensions of the bot can be up to a maximum of 25 cm*25 cm*25 cm (l*b*h) excluding the control device dimensions.
