--- a/eventReg/Navigator.html
+++ b/eventReg/Navigator.html
@@ -53,7 +53,7 @@
       </div>
 	  <div class="form-group">
         <label for="email">EMAIL(Team Leader)</label>
-            <input id="1634805877" type="text" name="entry.1634805877" class="form-control" required>
+            <input id="1634805877" type="email" name="entry.1634805877" class="form-control" required>
       </div>
 		
 		
@@ -77,28 +77,28 @@
 
 		  <div class="form-group">
         <label for="username">MEMBER 3(NAME)</label>
-	  <input id="1669528809" type="text" name="entry.1669528809" class="form-control" required>
+	  <input id="1669528809" type="text" name="entry.1669528809" class="form-control" >
 		</div>
 		 <div class="form-group">
         <label for="Phone">MEMBER 3 (DEPARTMENT)</label>
-          <input id="916816835" type="text" name="entry.916816835" class="form-control" required>
+          <input id="916816835" type="text" name="entry.916816835" class="form-control" >
       </div>
 	  
 	   <div class="form-group">
         <label for="username">MEMBER 4(NAME)</label>
-		  <input id="266779834" type="text" name="entry.266779834" class="form-control" required>
+		  <input id="266779834" type="text" name="entry.266779834" class="form-control" >
 		</div>
 		 <div class="form-group">
         <label for="Phone">MEMBER 4 (DEPARTMENT)</label>
-        <input id="964584863" type="text" name="entry.964584863" class="form-control" required>
+        <input id="964584863" type="text" name="entry.964584863" class="form-control" >
       </div>
 	   <div class="form-group">
         <label for="username">MEMBER 5(NAME)</label>
-	  <input id="702983049" type="text" name="entry.702983049" class="form-control" required>
+	  <input id="702983049" type="text" name="entry.702983049" class="form-control" >
 		</div>
 		 <div class="form-group">
         <label for="Phone">MEMBER 5 (DEPARTMENT)</label>
-        <input id="1648386617" type="text" name="entry.1648386617" class="form-control" required>
+        <input id="1648386617" type="text" name="entry.1648386617" class="form-control" >
       </div>
 		
 	<br>
