--- a/eventReg/Picker.html
+++ b/eventReg/Picker.html
@@ -52,7 +52,7 @@
       </div>
 		  <div class="form-group">
         <label for="email">EMAIL(Team Leader)</label>
-              <input id="2068389188" type="text" name="entry.2068389188" class="form-control" required>
+              <input id="2068389188" type="email" name="entry.2068389188" class="form-control" required>
       </div>
 		
 	  <div class="form-group">
@@ -75,28 +75,28 @@
 
 		  <div class="form-group">
         <label for="username">MEMBER 3(NAME)</label>
-		   <input id="1631028979" type="text" name="entry.1631028979" class="form-control" required>     
+		   <input id="1631028979" type="text" name="entry.1631028979" class="form-control" >     
 		</div>
 		 <div class="form-group">
         <label for="Phone">MEMBER 3 (DEPARTMENT)</label>
-           <input id="658218254" type="text" name="entry.658218254" class="form-control" required>
+           <input id="658218254" type="text" name="entry.658218254" class="form-control" >
       </div>
 	  
 	   <div class="form-group">
         <label for="username">MEMBER 4(NAME)</label>
-		  <input id="1074229039" type="text" name="entry.1074229039" class="form-control" required>     
+		  <input id="1074229039" type="text" name="entry.1074229039" class="form-control" >     
 		</div>
 		 <div class="form-group">
         <label for="Phone">MEMBER 4 (DEPARTMENT)</label>
-            <input id="1289179413" type="text" name="entry.1289179413" class="form-control" required>
+            <input id="1289179413" type="text" name="entry.1289179413" class="form-control">
       </div>
 	   <div class="form-group">
         <label for="username">MEMBER 5(NAME)</label>
-		   <input id="387247342" type="text" name="entry.387247342" class="form-control" required>
+		   <input id="387247342" type="text" name="entry.387247342" class="form-control" >
 		</div>
 		 <div class="form-group">
         <label for="Phone">MEMBER 5 (DEPARTMENT)</label>
-            <input id="826131584" type="text" name="entry.826131584" class="form-control" required>
+            <input id="826131584" type="text" name="entry.826131584" class="form-control">
       </div>
 		
 	<br>
