--- a/eventReg/Terrence.html
+++ b/eventReg/Terrence.html
@@ -52,7 +52,7 @@
       </div>
 		 <div class="form-group">
         <label for="email">EMAIL(Team Leader)</label>
-          <input id="1611045152" type="text" name="entry.1611045152" class="form-control" required>
+          <input id="1611045152" type="email" name="entry.1611045152" class="form-control" required>
       </div>
 
 		
@@ -76,11 +76,11 @@
 
 		  <div class="form-group">
         <label for="username">MEMBER 3(NAME)</label>
-		  <input id="270733995" type="text" name="entry.270733995" class="form-control" required>     
+		  <input id="270733995" type="text" name="entry.270733995" class="form-control" >     
 		</div>
 		 <div class="form-group">
         <label for="Phone">MEMBER 3 (DEPARTMENT)</label>
-          <input id="1002061757" type="text" name="entry.1002061757" class="form-control" required>
+          <input id="1002061757" type="text" name="entry.1002061757" class="form-control" >
       </div>
 	  
 	   <div class="form-group">
@@ -89,15 +89,15 @@
 		</div>
 		 <div class="form-group">
         <label for="Phone">MEMBER 4 (DEPARTMENT)</label>
-             <input id="360526137" type="text" name="entry.360526137" class="form-control" required>
+             <input id="360526137" type="text" name="entry.360526137" class="form-control" >
       </div>
 	   <div class="form-group">
         <label for="username">MEMBER 5(NAME)</label>
-		 <input id="1379905778" type="text" name="entry.1379905778" class="form-control" required>     
+		 <input id="1379905778" type="text" name="entry.1379905778" class="form-control">     
 		</div>
 		 <div class="form-group">
         <label for="Phone">MEMBER 5 (DEPARTMENT)</label>
-             <input id="151357557" type="text" name="entry.151357557" class="form-control" required>
+             <input id="151357557" type="text" name="entry.151357557" class="form-control" >
       </div>
 		
 	<br>
