--- a/eventReg/combat.html
+++ b/eventReg/combat.html
@@ -52,7 +52,7 @@
       </div>
 	     <div class="form-group">
         <label for="email">EMAIL(Team Leader)</label>
-         <input id="2006403369" type="text" name="entry.2006403369" class="form-control" required>
+         <input id="2006403369" type="email" name="entry.2006403369" class="form-control" required>
       </div>
 
 		
@@ -77,28 +77,28 @@
 
 		  <div class="form-group">
         <label for="username">MEMBER 3(NAME)</label>
-		  <input id="1544478862" type="text" name="entry.1544478862" class="form-control" required>
+		  <input id="1544478862" type="text" name="entry.1544478862" class="form-control" >
 		</div>
 		 <div class="form-group">
         <label for="Phone">MEMBER 3 (DEPARTMENT)</label>
-               <input id="1740856705" type="text" name="entry.1740856705" class="form-control" required>
+               <input id="1740856705" type="text" name="entry.1740856705" class="form-control" >
       </div>
 	  
 	   <div class="form-group">
         <label for="username">MEMBER 4(NAME)</label>
-		 <input id="1575120167" type="text" name="entry.1575120167" class="form-control" required>
+		 <input id="1575120167" type="text" name="entry.1575120167" class="form-control" >
 		</div>
 		 <div class="form-group">
         <label for="Phone">MEMBER 4 (DEPARTMENT)</label>
-          <input id="1541062796" type="text" name="entry.1541062796" class="form-control" required>
+          <input id="1541062796" type="text" name="entry.1541062796" class="form-control" >
       </div>
 	   <div class="form-group">
         <label for="username">MEMBER 5(NAME)</label>
-	   <input id="1081211793" type="text" name="entry.1081211793" class="form-control" required>     
+	   <input id="1081211793" type="text" name="entry.1081211793" class="form-control" >     
 		</div>
 		 <div class="form-group">
         <label for="Phone">MEMBER 5 (DEPARTMENT)</label>
-           <input id="512919696" type="text" name="entry.512919696" class="form-control" required>
+           <input id="512919696" type="text" name="entry.512919696" class="form-control">
       </div>
 		
 	<br>
