--- a/eventReg/puzzle.html
+++ b/eventReg/puzzle.html
@@ -53,7 +53,7 @@
       </div>
 	  <div class="form-group">
         <label for="email">EMAIL(Team Leader)</label>
-        <input id="628829504" type="text" name="entry.628829504" class="form-control" required>
+        <input id="628829504" type="email" name="entry.628829504" class="form-control" required>
       </div>
 		
 		
@@ -77,11 +77,11 @@
 
 		  <div class="form-group">
         <label for="username">MEMBER 3(NAME)</label>
-	  <input id="614160745" type="text" name="entry.614160745" class="form-control" required>
+	  <input id="614160745" type="text" name="entry.614160745" class="form-control" >
 		</div>
 		 <div class="form-group">
         <label for="Phone">MEMBER 3 (DEPARTMENT)</label>
-           <input id="559470715" type="text" name="entry.559470715" class="form-control" required>
+           <input id="559470715" type="text" name="entry.559470715" class="form-control">
       </div>
 	  
 	  
