--- a/eventReg/soccer.html
+++ b/eventReg/soccer.html
@@ -53,7 +53,7 @@
 		
 		 <div class="form-group">
         <label for="email">EMAIL(Team Leader)</label>
-          <input id="1817269284" type="text" name="entry.1817269284" class="form-control" required>
+          <input id="1817269284" type="email" name="entry.1817269284" class="form-control" required>
       </div>
 	  
 	  <div class="form-group">
@@ -76,16 +76,16 @@
 
 		  <div class="form-group">
         <label for="username">MEMBER 3(NAME)</label>
- <input id="371449488" type="text" name="entry.371449488" class="form-control" required>
+ <input id="371449488" type="text" name="entry.371449488" class="form-control" >
 		</div>
 		 <div class="form-group">
         <label for="Phone">MEMBER 3 (DEPARTMENT)</label>
-            <input id="1095707155" type="text" name="entry.1095707155" class="form-control" required>
+            <input id="1095707155" type="text" name="entry.1095707155" class="form-control" >
       </div>
 	  
 	   <div class="form-group">
         <label for="username">MEMBER 4(NAME)</label>
-		            <input id="502013655" type="text" name="entry.502013655" class="form-control" required> 
+		            <input id="502013655" type="text" name="entry.502013655" class="form-control" > 
 		</div>
 		 <div class="form-group">
         <label for="Phone">MEMBER 4 (DEPARTMENT)</label>
@@ -93,11 +93,11 @@
       </div>
 	   <div class="form-group">
         <label for="username">MEMBER 5(NAME)</label>
-	   <input id="1659882789" type="text" name="entry.1659882789" class="form-control" required>   
+	   <input id="1659882789" type="text" name="entry.1659882789" class="form-control" >   
 		</div>
 		 <div class="form-group">
         <label for="Phone">MEMBER 5 (DEPARTMENT)</label>
-             <input id="881368154" type="text" name="entry.881368154" class="form-control" required>
+             <input id="881368154" type="text" name="entry.881368154" class="form-control" >
       </div>
 		
 	<br>
