--- a/eventReg/wings.html
+++ b/eventReg/wings.html
@@ -53,7 +53,7 @@
       </div>
 		<div class="form-group">
         <label for="email">EMAIL(Team Leader)</label>
-            <input id="558681152" type="text" name="entry.558681152" class="form-control" required>
+            <input id="558681152" type="email" name="entry.558681152" class="form-control" required>
       </div>
 		
 	  <div class="form-group">
@@ -76,28 +76,28 @@
 
 		  <div class="form-group">
         <label for="username">MEMBER 3(NAME)</label>
-		 <input id="1164137979" type="text" name="entry.1164137979" class="form-control" required>  
+		 <input id="1164137979" type="text" name="entry.1164137979" class="form-control" >  
 		</div>
 		 <div class="form-group">
         <label for="Phone">MEMBER 3 (DEPARTMENT)</label>
-             <input id="74630396" type="text" name="entry.74630396" class="form-control" required>
+             <input id="74630396" type="text" name="entry.74630396" class="form-control" >
       </div>
 	  
 	   <div class="form-group">
         <label for="username">MEMBER 4(NAME)</label>
-		  <input id="1390615904" type="text" name="entry.1390615904" class="form-control" required>
+		  <input id="1390615904" type="text" name="entry.1390615904" class="form-control">
 		</div>
 		 <div class="form-group">
         <label for="Phone">MEMBER 4 (DEPARTMENT)</label>
-            <input id="380921809" type="text" name="entry.380921809" class="form-control" required>
+            <input id="380921809" type="text" name="entry.380921809" class="form-control" >
       </div>
 	   <div class="form-group">
         <label for="username">MEMBER 5(NAME)</label>
-		 <input id="1304083796" type="text" name="entry.1304083796" class="form-control" required>
+		 <input id="1304083796" type="text" name="entry.1304083796" class="form-control" >
 		</div>
 		 <div class="form-group">
         <label for="Phone">MEMBER 5 (DEPARTMENT)</label>
-           <input id="1876408563" type="text" name="entry.1876408563" class="form-control" required>
+           <input id="1876408563" type="text" name="entry.1876408563" class="form-control">
       </div>
 		
 	<br>
