--- a/home.html
+++ b/home.html
@@ -17,6 +17,8 @@
   <link rel="stylesheet" type="text/css" href="./index_files/fonts.css">
   <script src="./index_files/jquery-1.10.2.js.download"></script>
   <link href="./index_files/css" rel="stylesheet">
+		
+		<meta name="google-site-verification" content="tft9062jL_MEP5DfFywiOQixj99zN5gVyX3lLIOCdPY" />
 </head>
 	<style>
 
