--- a/BrainTeaser.html
+++ b/BrainTeaser.html
@@ -70,6 +70,9 @@ div.style2 {
 }
 		</style>
 		<script src="./public/js/modernizr.custom.js"></script>
+		
+		
+		<meta name="google-site-verification" content="tft9062jL_MEP5DfFywiOQixj99zN5gVyX3lLIOCdPY" />
 	</head>
 	<body style="background: url('public/images/blackBack.jpg');background-size: cover;background-repeat: no-repeat;">
 
