--- a/Creativity.html
+++ b/Creativity.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" href="./public/css/preloader.css">
     	<link rel="stylesheet" href="./public/css/scrollbar.css">
 		<link rel="stylesheet" href="./public/vendor/animatemin.css">
+		
 		<style>
 			#headLogo {
 				height: 25vh;
@@ -50,7 +51,10 @@
 				border: 2px solid black;
 			}
 		</style>
+		
 		<script src="./public/js/modernizr.custom.js"></script>
+
+	<meta name="google-site-verification" content="tft9062jL_MEP5DfFywiOQixj99zN5gVyX3lLIOCdPY" />
 	</head>
 	<body style="background: url('public/images/blackBack.jpg');background-size: cover;background-repeat: no-repeat;">
 
