--- a/contact.html
+++ b/contact.html
@@ -81,6 +81,7 @@ div.style2 {
   font-family: pasajero;
 }
     </style>
+	<meta name="google-site-verification" content="tft9062jL_MEP5DfFywiOQixj99zN5gVyX3lLIOCdPY" />
 </head>
 <body onload="myFunction()" style="margin:0;">
 
