--- a/team.html
+++ b/team.html
@@ -15,6 +15,7 @@
       <link href="./team_files/css" rel="stylesheet">
       <link href="./team_files/css(1)" rel="stylesheet">
   <!-- <meta http-equiv="refresh" content="3"> -->
+	<meta name="google-site-verification" content="tft9062jL_MEP5DfFywiOQixj99zN5gVyX3lLIOCdPY" />
 </head>
 	<style>
 		@font-face {
