--- a/events.html
+++ b/events.html
@@ -191,7 +191,7 @@ div.style2 {
             <h2 slot="header">Rovers</h2>
         <p slot="content">We're fascinated with robots because they are reflections of ourselves.</p>
         </card></a>
-       <a href="./BrainTeaser.html" target="_blank"><card data-image="https://www.rubiks.com/rubiks-assets/images/home-panels/6892/in_the_media-2__large.jpg">
+       <a href="./BrainTeaser.html" target="_blank"><card data-image="https://images-na.ssl-images-amazon.com/images/I/41eMIWUk9gL.jpg">
             <h2 slot="header">Brain Teaser</h2>
         <p slot="content">The art of simplicity is a puzzle of complexity.</p>
         </card></a>
