--- a/BrainTeaser.html
+++ b/BrainTeaser.html
@@ -203,7 +203,7 @@ div.style2 {
                         </ul>
 						<a href="./eventReg/AppMania.html"><div id="btn">Register</div></a>
 						<a href="https://techstorm2k19.github.io/Statement/prlmb.html"><div id="btn">problem Statement </div></a>
-						<p class='dummy-text'><b>Event Description :</b><br> *BP PODDAR INSTITUTE OF MANAGEMENT AND TECHNOLOGY* presents *APPMANIA* in the awaited *TECHSTORM 2.19* Calling all the young innovators with a knack to hack together the next disruptive *Android, Web, iOS, Windows* applications to take the ever-growing market of apps by storm. Register and present your application. This is your chance to make a dent in the universe. The *APPMANIA* event will be held at our college on 12th April 2018. Interested teams (Minimum 1 Maximum 2 Members) can submit their names and complete the registration .Our registration portal on our App/Website is OPEN!!!</p>
+						<p class='dummy-text'><b>Event Description :</b><br> *BP PODDAR INSTITUTE OF MANAGEMENT AND TECHNOLOGY* presents *APPMANIA* in the awaited *TECHSTORM 2.19* Calling all the young innovators with a knack to hack together the next disruptive *Android, Web, iOS, Windows* applications to take the ever-growing market of apps by storm. Register and present your application. This is your chance to make a dent in the universe. The *APPMANIA* event will be held at our college on Date. Interested teams (Minimum 1 Maximum 2 Members) can submit their names and complete the registration .Our registration portal on our App/Website is OPEN!!!</p>
 						<p class="dummy-text">
 							<b>Rules and Regulations</b><br><br>
 1. Each team must comprise of minimum of 1 member and a maximum of 2 members
@@ -229,7 +229,7 @@ otherwise they shall need to fill in a regulatory declaration form as per IT rul
 						<div class='dummy-img'><img src='public/images/events/TechnoMania.jpg' width = "320px" height="200px">
 						</div>
 						<p class='dummy-text'>Event Name : Techno Mania</p>
-						<p class='dummy-text'>Team Size: 3</p>
+						
                          <ul style="color: black; list-style: none">
                             <li>Participation Fees for College Students: ₹100 </li>
                             <li>and other Students: ₹120 </li>
