--- a/BrainTeaser.html
+++ b/BrainTeaser.html
@@ -229,6 +229,7 @@ otherwise they shall need to fill in a regulatory declaration form as per IT rul
 						<div class='dummy-img'><img src='public/images/events/TechnoMania.jpg' width = "320px" height="200px">
 						</div>
 						<p class='dummy-text'>Event Name : Techno Mania</p>
+						<p class='dummy-text'>Team Size : 4</p>
 						
                          <ul style="color: black; list-style: none">
                             <li>Participation Fees for College Students: ₹100 </li>
@@ -243,9 +244,10 @@ otherwise they shall need to fill in a regulatory declaration form as per IT rul
 <br>
 2.The member of a single team should be from the same institute.
 <br>
-3.Each team must consist of 5 members. 
+3.Each team must consist of 4 members. 
 <br>
-4.Each team must have to display their hardware models and have a presentation about their entire project.
+4.Each team must display their hardware models and have a presentation about their entire
+ project.
 <br>
 5.Each team will get 10 minutes for showing their hardware model and 10 minutes to perform the presentation.
 <br>
