--- a/Creativity.html
+++ b/Creativity.html
@@ -101,7 +101,7 @@
 <br>
 2.Avoid political biasness, obscenity, pornography, excessive violence. In such case, the submission will be rejected.
 <br>
-3.Participants  may or may not be from same college but submission of a copy of their college id card is compulsory.
+ <b>3.Participants  may or may not be from same college but submission of a copy of their college id card is compulsory.</b>
 <br>
 4.The maximum number of team members can be 8 (including the cast).
 <br>
