--- a/Games.html
+++ b/Games.html
@@ -197,7 +197,49 @@
 <br>
 10.All complaints shall be dealt with after the match has been completed.
 <br>
-11.Disconnection: Any connection loss between opponents due to system, network, PC, and/or power problems/issues.</p>
+11.Disconnection: Any connection loss between opponents due to system, network, PC, and/or power problems/issues.
+<br>
+12.Set pieces are available. Man Marking is allowed.
+No forward pass at kick-off, you must back pass the ball. 
+<br>
+13.You can choose your preferred controls; Manual, Semi or Assisted.
+Tactical defending mode only.
+<br>
+Controllers are supplied by PLG. It is the responsibility of all Players to be
+familiar with the controller’s functions and mode of operation.
+<br>
+If a controller is defective, a Player can pause the game and notify the referee
+once only, if the player agrees the problem is fixed he may not pause again.
+<br>
+14.Extra Time: extra time of two one (1) minute halves will be played in the
+event of a draw after regulation. Penalties will decide the winner if after extra
+time the scores are level.
+<br>
+15.
+Goal Keeper: World Class
+Injuries: Off
+<br>
+Bookings: On
+<br>
+Referee: Random <br>
+Camera Settings: Tele Broadcast <br>
+Time of the Day: Night <br>
+Home Team: Coin toss will decide.	 Half: 4mins Groups
+Half: 4mins Knock Out <br>
+Half: Bo3 6mins Qs to Final (depending on tournament) <br>
+Handball: Off <br>
+Time/Score display: On <br>
+HUD: Player Name Bar <br>
+Offside: On <br>
+Camera: Tele Broadcast <br>
+Radar: 2D <br>
+Defense type: Tactical only <br> <br>
+Pitch Wear: None <br>
+Stadium: Neutral <br>
+Goalkeeper Control: Yes <br>
+
+
+</p>
 						<p class='dummy-text'>Contact Person:</p>
 						<ul class = 'dummy-text'>
 							<li> Kirath Karak(CSE)-7979935326</li>
