--- a/Games.html
+++ b/Games.html
@@ -260,8 +260,8 @@ Goalkeeper Control: Yes <br>
 							<u>
 							Event Description : 
 							</u><br><br>
-							Techniq is an event that combines mental ability with knowledge and craftsmanship. The first
-round is an aptitude round with tricky questions, out of which 4 teams proceed to the finals.</p>
+							The Laser Game KHET 2.0: Mind blowing laser fun for players ages 9-99. Using simple rules that can be learned in minutes, players alternate turns moving Egyptian themed mirrored Pieces, after which they fire their REAL (eye-safe) laser with the goal of blasting their opponents PHARAOH to win the game! BASIC GEOMETRICAL CONCEPT IS THE KEY FACTOR IN THIS GAME.
+</p>
 						<p class="dummy-text">
 							<u>Rules & Regulation :</u>
 							<br><br>
