--- a/Games.html
+++ b/Games.html
@@ -242,7 +242,7 @@ Goalkeeper Control: Yes <br>
 </p>
 						<p class='dummy-text'>Contact Person:</p>
 						<ul class = 'dummy-text'>
-							<li> Kirath Karak(CSE)-7979935326</li>
+							<li> Subhajit Paul(CSE)-8016970670</li>
 							<li>Rohan Sarkar(IT)-9051067793</li>
 						</ul>
 					</div>
