--- a/Rovers.html
+++ b/Rovers.html
@@ -181,7 +181,7 @@ the decision of the coordinators will be considered as final.<br>
 						<p class='dummy-text'>Contact Person:</p>
 						<ul class = 'dummy-text'>
 							<li>Sangeeta Kundu(ECE)- 7044247824</li>
-							<li>Samapika Mandal(EE)-7602011021</li>
+							<li>Samapika Mandal(EE)-7908793342</li>
 						</ul>
 					</div>
 					<div>
@@ -315,8 +315,8 @@ round is an aptitude round with tricky questions, out of which 4 teams proceed t
                         </p>
 						<p class='dummy-text'>Contact Person:</p>
 						<ul class = 'dummy-text'>
+							<li>Sayan mukherjee(IT) - 7003654533</li>
 							<li>Soham Debnath(ECE)-7980549825</li>
-							<li></li>
 						</ul>
 					</div>
 					<div>
