--- a/Games.html
+++ b/Games.html
@@ -314,20 +314,24 @@ Goalkeeper Control: Yes <br>
 <br>
 3.Rushed/engineered bases are not allowed. (Whether a base is rushed/engineered or not will be decided by the coordinators).
 <br>
-4 Individual entry.
+4 One entry per person.
 <br>
-5.One entry per person.
+
+5.Coordinators will not provide any sort of internet connection.
 <br>
-6.Coordinators will not provide any sort of internet connection.
+
+
+6.In case of any conflict, the decision of the coordinator will be final.
 <br>
-7.Coordinators will not provide any sort of internet connection.
+7.Breaking of any rules will lead to immediate disqualification.
 <br>
-8.In case of any conflict, the decision of the coordinator will be final.
+8. Only clan can spells are allowed provided by the coordinators.
 <br>
-9.Breaking of any rules will lead to immediate disqualification.
+9. Clan troops are not allowed during the event whether it is used as attacking or defending the villege.<br>
+							
+10.There will be no use of magic items(such as using potion which boosts the army and spells to a max level) and siege machines.
 <br>
-10.There will be no use of magic items(such as using potion which boosts the army and spells to a max level).
-<br>
+CLASH ON!!<br><br>							
 Registration Fees : Registration fee is Rs 30 own students.
 Registration fee is Rs 50 other students.
 						</p>
