--- a/BrainTeaser.html
+++ b/BrainTeaser.html
@@ -202,22 +202,30 @@ div.style2 {
                             <li>and other Students: ₹150 </li>
                         </ul>
 						<a href="./eventReg/AppMania.html"><div id="btn">Register</div></a>
-						<a href="https://techstorm2k19.github.io/Statement/prlmb.html"><div id="btn">problem Statement </div></a>
-						<p class='dummy-text'><b>Event Description :</b><br> *BP PODDAR INSTITUTE OF MANAGEMENT AND TECHNOLOGY* presents *APPMANIA* in the awaited *TECHSTORM 2.19* Calling all the young innovators with a knack to hack together the next disruptive *Android, Web, iOS, Windows* applications to take the ever-growing market of apps by storm. Register and present your application. This is your chance to make a dent in the universe. The *APPMANIA* event will be held at our college on Date. Interested teams (Minimum 1 Maximum 2 Members) can submit their names and complete the registration .Our registration portal on our App/Website is OPEN!!!</p>
+						<p class='dummy-text'><b>Event Description :</b><br> *BP PODDAR INSTITUTE OF MANAGEMENT AND TECHNOLOGY* presents *APPMANIA* in the awaited *TECHSTORM 2.19* Calling all the young innovators with a knack to hack together the next disruptive *Android, Web, iOS, Windows* applications to take the ever-growing market of apps by storm. Register and present your application. This is your chance to make a dent in the universe. The *APPMANIA* event will be held at our college on 15th March 2019. Interested teams (Minimum 1 Maximum 2 Members) can submit their names and complete the registration .Our registration portal on our App/Website is OPEN!!!</p>
 						<p class="dummy-text">
 							<b>Rules and Regulations</b><br><br>
-1. Each team must comprise of minimum of 1 member and a maximum of 2 members
+1. A maximum of 2 members are allowed in a single team. One single participant can also represent the team.
 <br>
 
-<br>
-2. You need to present your work in a span of 10 minutes which includes Power-point presentation and demonstration of your application, followed by a two minutes Questions &Answer session.
-<br>
-3. We advise all participating teams to carry their own laptops for their presentation and use their own Internet connection, 
-otherwise they shall need to fill in a regulatory declaration form as per IT rules & regulations of the institute.
-<br>
-4. All team members must carry a government ID proof (VoterID Card, Aadhar Card, PAN card, Passport) and a college IDcard during their participation at the event.
-<br>
 
+2. Final Submission of the app along with the ppt on the day of the event. 
+<br>
+3. Maximum Time Limit for the app for PowerPoint Presentation and App Demonstration is 10 minutes. The Participating team may be
+penalised (score penalty) if time taken exceeds further.
+<br>
+4. PPT should NOT contain more than 10 slides and must contain the following: <br>
+➢ Technology Stack Used<br>
+➢ Dependencies of the App Idea(if any)<br>
+➢ Use-Case Diagram/Model
+<br>
+We advise all participating teams to carry their own laptops for their presentation
+and use their own Internet connection, otherwise they shall need to fill in a regulatory
+declaration form as per IT rules & regulations of the institute.
+<br>
+All team members must carry a government ID proof (VoterID Card, Aadhar Card,
+PAN card, Passport) and a college IDcard during their participation at the event.
+<br>							
 						</p>
 						<p class='dummy-text'>Contact Person:</p>
 						<ul class = 'dummy-text'>
