--- a/Rovers.html
+++ b/Rovers.html
@@ -104,10 +104,13 @@
 						<br>
 						<p class="dummy-text">
 							<b>BOT SPECIFICATION</b><br><br>
-1. (a). The recommended weight for the bots is 15 kg(minimum) - 30kg(maximum)(1st winner will be selected from here)
+1.There will be three categories based on the weight of the bots <br>
+Category 1- 16kg to 30kg (1 st winner will be selected from this category)
 <br>
-1(b)Category (2)-The recommended weight for the bots is less than 15 kg.(2nd and 3rd winner will be selected from here)
+Category 2- 7kg to 15kg (1 st runners up will be selected from this category)
 <br>
+Category 3- maximum 6kg (2 nd runners up will be selected from this category)
+<br>							
 2.Dimension should be less than (50*50*50) cm^3 including all gadgets.
 <br>
 3.Bot’s wheels should fit in a 45*45cm^2 platform at the time of start.
