--- a/Rovers.html
+++ b/Rovers.html
@@ -303,18 +303,21 @@ be disclosed to teams after the prelim round is completed.
 
 # Participants will be provided with a standard 220-volts 50 Hz AC power supply outlet.<br/>
 
-# The robot should fit in a box of dimension 50cm(l) x 30cm(b) x 30cm(h) with the picking mechanisms. <br/>
+# The robot should fit in a box of dimension 40cm (l) x 30cm (b) x 30cm (h) with the picking
+mechanisms. <br/>
 
 # No two team should share the same robot.<br/>
 
 # Maximum weight of robot should not be more than 4 kgs. External control device shall not be considered for weight and size measurement.<br/>
 
-# The robot may be wired or wireless. No extra points for wireless robots. But for wireless, it is mandatory to use dual frequency remote or else it will lead to disqualification. For wired bots, the lenght must be enough for cover the entire arena.<br/>
+# The robot may be wired or wireless. There is a Special credit for wireless bot. But for wireless, it is
+mandatory to use dual frequency remote or else it will lead to disqualification. For wired bots, the
+length must be enough for cover the entire arena.<br/>
 
-# Lego kit or spare parts are strictly prohibited. However team can use ready made gear  system.<br/>
+# Lego kit or spare parts are strictly prohibited. However team can use readymade gear system.<br/>
 
-# The potential difference between any two points should not exceed 24 V DC at any point of time during the run
-round is an aptitude round with tricky questions, out of which 4 teams proceed to the finals.<br/>
+# The potential difference between any two points should not exceed 24 V DC at any point of time
+during the run round is an aptitude round with tricky questions, out of which 4 teams proceed to the finals.<br/>
                         </p>
 						<p class='dummy-text'>Contact Person:</p>
 						<ul class = 'dummy-text'>
