--- a/home.html
+++ b/home.html
@@ -221,7 +221,7 @@ We invite you all to come and unleash your technical skills and creativity, be o
 	      <!--ungeennrig-->
 	       <div class="column is-3 ">
           	<figure>
-            	<img src="https://yt3.ggpht.com/a-/AAuE7mBvZuvqN_QuK3ZIoayPNxkzHhaAnVTI2OEx1A=s900-mo-c-c0xffffffff-rj-k-no" alt=""-->
+            	<img src="https://s3-ap-southeast-1.amazonaws.com/internshala-uploads/google_logo/Ungineering_991774.png" alt=""-->
           	</figure>
         	</div>
 	      
