--- a/BrainTeaser.html
+++ b/BrainTeaser.html
@@ -169,6 +169,8 @@ div.style2 {
                             <li>and other Students: ₹40 </li>
                         </ul>
 						<a href="eventReg/Omega.html"><div id="btn">Register</div></a>
+						
+						<a href="  https://techstorm2k19.github.io/result/result.html  "><div id="btn">Result</div></a>
 						<p class='dummy-text'>Event Description : The event will commence with the declaration of a robotics\automation problem.</p>
 						<p class="dummy-text">
 							<b>Rules and Regulations</b><br>
