--- a/home.html
+++ b/home.html
@@ -305,7 +305,7 @@ E-mail : info@bppimt.ac.in<br>
     <div style="font-family:tarjanpro"> <a href="gallery.html" class="icon-image">Gallery</a></div>
     <div style="font-family:tarjanpro">  <a href="team.html" class="icon-lock">Team</a></div>
     <div style="font-family:tarjanpro"><a href="contact.html" class="icon-mail">Contact Us</a></div>
-   <div style="font-family:tarjanpro"><a href="https://techstorm2k19.github.io/result/result.htmll" class="icon-mail">Results</a></div>		
+   <div style="font-family:tarjanpro"><a href="https://techstorm2k19.github.io/result/result.html" class="icon-mail">Results</a></div>		
  </nav>
 
 <button type="button" id="menu-toggle" class="button is-warning is-large" name="button">☰</button>
