--- a/events.html
+++ b/events.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tecchstorm 2.19 | Events</title>
+    <title>Techstorm 2.19 | Events</title>
     <link rel="stylesheet" href="public/css/events.css">
     <link rel="stylesheet" href="./public/css/preloader.css">
     <link rel="icon" href="./favicon.png">
