--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./contactUs_files/bulma.css">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Tecchstorm 2.19 | Contact</title>
+  <title>Techstorm 2.19 | Contact</title>
 	<link rel="stylesheet" type="text/css" href="./contactUs_files/component.css">
   <link rel="stylesheet" href="index_files/master.css">
   <link rel="stylesheet" href="./contactUs_files/team.css">
