--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="./contactUs_files/bulma.css">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Tecchstorm 2.19 | Gallery</title>
+	<title>Techstorm 2.19 | Gallery</title>
      <link rel="stylesheet" href="./public/css/preloader.css">
   <link rel="stylesheet" type="text/css" href="./contactUs_files/component.css">
   <link rel="stylesheet" href="./contactUs_files/master.css">
