--- a/team.html
+++ b/team.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./team_files/bulma.css">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Tecchstorm 2.19 | Team</title>
+<title>Techstorm 2.19 | Team</title>
 <link rel="stylesheet" type="text/css" href="./team_files/component.css">
   <link rel="stylesheet" href="./team_files/master.css">
     <link rel="stylesheet" href="./team_files/main.css">
